--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "framer-motion": "^12.12.1",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
